# internal/http/server/handlers/get_all_pharmacies.go
@@ -1,65 +1,0 @@
-package handlers
-
-import (
-	"encoding/xml"
-	"net/http"
-	"pharmacies-seeker/internal/core/domain/pharmacy"
-	"pharmacies-seeker/internal/core/usecases"
-	"pharmacies-seeker/internal/infraestucture/dependencies"
-	"strings"
-
-	"github.com/gofiber/fiber/v3"
-)
-
-type FindAllPharmaciesHandler struct {
-	uc *usecases.FinderAllPharmacies // .FinderAllPharmacies
-}
-
-func NewFindAllPharmaciesHandler(container dependencies.Container) *FindAllPharmaciesHandler {
-	return &FindAllPharmaciesHandler{
-		uc: usecases.NewFinderAllPharmacies(container.PharmaciesRepository()),
-	}
-}
-
-// swagger: route GET /pharmacies getAllPharmacies
-//
-// # Get all pharmacies
-//
-// Responses:
-//
-// - 200: GetAllPharmaciesResponse
-func (handler *FindAllPharmaciesHandler) GetAllPharmacies(ctx fiber.Ctx) error {
-	communeName := ctx.Query("commune", "")
-	name := ctx.Query("name", "")
-	responseType := ctx.Query("type")
-
-	pharmacies, err := handler.uc.Execute(ctx.Context(), communeName)
-	if err != nil {
-		return reply(ctx, http.StatusInternalServerError, err.Error(), nil)
-	}
-
-	// Optional name filter (case-insensitive contains)
-	if name != "" {
-		needle := strings.ToLower(name)
-		filtered := make([]pharmacy.Pharmacy, 0, len(pharmacies))
-		for _, p := range pharmacies {
-			if strings.Contains(strings.ToLower(p.LocalNombre), needle) {
-				filtered = append(filtered, p)
-			}
-		}
-		pharmacies = filtered
-	}
-
-	if responseType == "xml" {
-		var pharmaciesXML pharmacy.Pharmacies
-		pharmaciesXML.Pharmacies = pharmacies
-		xmlBytes, err := xml.Marshal(pharmaciesXML)
-		if err != nil {
-			return err
-		}
-		ctx.Set("Content-Type", "application/xml")
-		return ctx.SendString(string(xmlBytes))
-	}
-
-	return reply(ctx, http.StatusOK, "OK", pharmacies)
-}
